--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -7,3 +7,10 @@
 .bg-orange-50{
     background: #FAEDE8;
 }
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+  appearance: none;
+  outline: none;
+}
